--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.2.0",
     "dotenv": "^16.0.3",
-    "neo4j-driver": "^5.3.0"
+    "neo4j-driver": "^5.3.0",
+    "nodemailer": "^6.8.0"
   }
 }
